mgmt/database/lisa-postgres/postgres-ingress.yaml
# argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: postgres.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postgres-service
                port:
                  number: 5432
